Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9729

TestImpalaShell.test_summary fails with Could not execute command: summary

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.0.0
    • Backend

    Description

      https://jenkins.impala.io/job/ubuntu-16.04-dockerised-tests/2305/testReport/shell.test_shell_commandline/TestImpalaShell/test_summary_table_format_and_file_extension____textfile_____txt_____protocol__hs2_/

      shell/test_shell_commandline.py:345: in test_summary     result_set = run_impala_shell_cmd(vector, args) shell/util.py:172: in run_impala_shell_cmd     result.stderr) E   AssertionError: Cmd ['-q', 'show tables; summary;'] was expected to succeed: Server version: impalad version 4.0.0-SNAPSHOT DEBUG (build c92321c20c7956f6a5dd947de7fe867052aca0fe) E   Query: show tables E   Fetched 3 row(s) in 0.03s E   ERROR: Query id 924e3b59eb41ff48:078cff2f00000000 not found. E    E   Could not execute command: summary
      
      Stacktrace
      
      shell/test_shell_commandline.py:345: in test_summary
          result_set = run_impala_shell_cmd(vector, args)
      shell/util.py:172: in run_impala_shell_cmd
          result.stderr)
      E   AssertionError: Cmd ['-q', 'show tables; summary;'] was expected to succeed: Server version: impalad version 4.0.0-SNAPSHOT DEBUG (build c92321c20c7956f6a5dd947de7fe867052aca0fe)
      E   Query: show tables
      E   Fetched 3 row(s) in 0.03s
      E   ERROR: Query id 924e3b59eb41ff48:078cff2f00000000 not found.
      E   
      E   Could not execute command: summary
      

      I can reproduce locally.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: