IMPALA-9729: consistent GetExecSummary() behaviour

Before IMPALA-9380, GetExecSummary() for archived
queries without a coordinator returned a blank TExecSummary,
but for in-flight queries it returned a "not found" error.

This was masked by the synchronous query unregistration,
but now has made an impala-shell test flaky, because the
close() RPC returns to the shell before the query is archived,
so the following GetExecSummary() call may go down either
code path.

This change makes the behaviour consistent for both code
paths and preserves impala-shell behaviour.

Testing:
Looped TestImpalaShell.test_summary to make sure flakiness was
fixed.

Change-Id: If2b2ab118c4769e80284b2a3390577dd5f5e888b
Reviewed-on: http://gerrit.cloudera.org:8080/15868
Reviewed-by: Thomas Tauber-Marshall <tmarshall@cloudera.com>
Tested-by: Tim Armstrong <tarmstrong@cloudera.com>